--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@astrojs/react": "^4.2.0",
     "@astrojs/svelte": "^7.0.4",
     "astro": "^5.2.5",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "svelte": "^5.19.7",
-    "svelte-countup": "^0.2.8"
+    "svelte-countup": "^0.2.8",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.1",
