--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@astrojs/react": "^4.2.0",
     "astro": "^5.2.5",
+    "framer-motion": "^12.4.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
-    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.2",
     "zustand": "^5.0.3"
