--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "analyze": "astro build --analyze",
+    "lighthouse": "lighthouse http://localhost:3000 --view",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.2.0",
-    "astro": "^5.2.6",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/prefetch": "^0.4.1",
+    "@astrojs/partytown": "^2.0.4",
+    "astro": "^5.3.0",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.2",
@@ -23,14 +33,24 @@
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@astrojs/image": "^0.18.0",
+    "schema-dts": "^1.1.2"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "lighthouse": "^11.6.0",
     "postcss": "^8.5.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
