--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
       "@/*": [
         "./src/*"
       ]
-    }
-  },
-  "jsx": "react-jsx",
-  "jsxImportSource": "react"
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "types": ["astro/client", "astro/assets"]
+  }
 }
