--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/partytown": "^2.0.4",
+    "@astrojs/prefetch": "^0.4.1",
     "@astrojs/react": "^4.2.0",
     "@astrojs/sitemap": "^3.1.1",
-    "@astrojs/prefetch": "^0.4.1",
-    "@astrojs/partytown": "^2.0.4",
+    "@emailjs/browser": "^4.4.1",
     "astro": "^5.3.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.3",
@@ -29,20 +31,20 @@
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "schema-dts": "^1.1.2",
     "sharp": "^0.33.5",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3",
-    "@astrojs/image": "^0.18.0",
-    "schema-dts": "^1.1.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/parser": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.4",
